Fixed Get My Quotes button border alignment

--- a/stylesheets.css
+++ b/stylesheets.css
@@ -938,6 +938,7 @@ button.zipcode-button {
   border-color: #01D06F;
   margin-left: -30px;
   font-weight: bold;
+  border-top-width: 3px;
 }
 
 h2.container-headers {
